# Apex-Legends-Map-Rotation-Discord-Bot

./: LICENSE  README.md  main.py  pyproject.toml  secretsEnviroment.json
