[tool.poetry]
name = "maprotationtutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
poetry = "^1.1.8"
json5 = "^0.9.6"
requests = "^2.26.0"
http_request = "^1.2"
"discord.py" = "^1.7.3"
discord-cli = "^1.0.0"



[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
